corrected file paths

--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Code Quiz</title>
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  <header>
+    <a href="./high-scores.html" class="high-scores">high scores</a>
+    <span id="timer">Time: 75</span>
+  </header>
+
+  <div id="quiz">
+    <h2 class="question">Code Quiz Challenge</h2>
+    <p>Try answering the following code-related questions within the time limit. For every wrong answer, you will have 10 seconds deducted from your time/score!</p>
+    <ol></ol>
+    <button>start quiz</button>
+    <p></p>
+  </div>
+
+  <script src="assets/js/script.js"></script>
 </body>
 </html>
