--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div id="quiz">
     <h2 class="question">Code Quiz Challenge</h2>
     <p>Try answering the following code-related questions within the time limit. For every wrong answer, you will have 10 seconds deducted from your time/score!</p>
-    <ol></ol>
+    <ol id="choices"></ol>
     <button>start quiz</button>
     <p></p>
   </div>
