--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
 <body>
   <header>
     <a href="./high-scores.html" class="high-scores">high scores</a>
-    <span id="timer">Time: 75</span>
+    <span id="timer"></span>
   </header>
 
   <div id="quiz">
-    <h2 class="question">Code Quiz Challenge</h2>
-    <p>Try answering the following code-related questions within the time limit. For every wrong answer, you will have 10 seconds deducted from your time/score!</p>
-    <ol id="choices"></ol>
-    <button>start quiz</button>
-    <p></p>
+    <h2 class="question" id="quizQuestion">Code Quiz Challenge</h2>
+    <p id="intro">Try answering the following code-related questions within the time limit. For every wrong answer, you will have 10 seconds deducted from your time/score!</p>
+    <ul id="choices"></ul>
+    <button id="startBtn">start quiz</button>
   </div>
 
   <script src="assets/js/script.js"></script>
