--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
     <button id="startBtn">start quiz</button>
   </div>
 
+  <div id="highScore">
+    <input>
+    <button></button>
+
+    <ol></ol>
+  </div>
+
   <script src="assets/js/script.js"></script>
 </body>
 </html>
