working in js on endgame function

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <button id="startBtn">start quiz</button>
   </div>
 
-  <div id="highScore">
-    <input>
-    <button></button>
-
-    <ol></ol>
+  <div id="scoreEntry">
+    <h2>All done!</h2>
+    <p id="score"></p>
+    <input type="text" id="initials" placeholder="initials">
+    <button>Submit</button>
   </div>
 
   <script src="assets/js/script.js"></script>
