--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div id="quiz">
     <h2 class="question" id="quizQuestion">Code Quiz Challenge</h2>
     <p id="intro">Try answering the following code-related questions within the time limit. For every wrong answer, you will have 10 seconds deducted from your time/score!</p>
-    <ul id="choices"></ul>
+    <div id="choices"></div>
     <button id="startBtn">start quiz</button>
   </div>
 
@@ -25,7 +25,7 @@
     <h2>All done!</h2>
     <p id="score"></p>
     <input type="text" id="initials" placeholder="initials">
-    <button>Submit</button>
+    <button id="scoreBtn">Submit</button>
   </div>
 
   <script src="assets/js/script.js"></script>
