working in js on endgame function

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div id="scoreEntry">
     <h2>All done!</h2>
     <p id="score"></p>
-    <input type="text" id="initials" placeholder="initials">
+    <input type="text" id="initials" placeholder="initials" />
     <button id="scoreBtn">Submit</button>
   </div>
 
