save score function

--- a/high-scores.html
+++ b/high-scores.html
@@ -4,8 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Code Quiz - High Scores</title>
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  <header>
+    <span id="timer"></span>
+  </header>
+
+  <div id="quiz">
+    <h2 class="question" id="quizQuestion">High Scores</h2>
+    <ol id="highScores"></ol>
+    <button id="goBack">Go Back</button>
+    <button id="resetScores" value="reset">Clear High Scores</button>
+  </div>
+
 </body>
 </html>
