--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
   <div id="scoreEntry">
     <h2>All done!</h2>
-    <p id="score"></p>
-    <input type="text" id="initials" placeholder="initials" />
+    <p id="finalScore"></p>
+    <input type="text" id="userInitials" placeholder="initials" value="" />
     <button id="scoreBtn">Submit</button>
   </div>
 
