--- a/index.html
+++ b/index.html
@@ -16,14 +16,18 @@
 
   <div id="quiz">
     <h2 class="question" id="quizQuestion">Code Quiz Challenge</h2>
-    <p id="intro">Try answering the following code-related questions within the time limit. For every wrong answer, you will have 10 seconds deducted from your time/score!</p>
-    <div id="choices"></div>
+    <p id="intro">Try answering the following code-related questions within the time limit. For every wrong answer, you will have 10 seconds deducted from your time/score!
+      <br \>
+      <br \>
     <button id="startBtn">start quiz</button>
+    </p>
+    <div id="choices"></div>
   </div>
 
   <div id="scoreEntry">
     <h2>All done!</h2>
     <p id="finalScore"></p>
+    <label>Enter your initials:</label>
     <input type="text" id="userInitials" placeholder="initials" value="" />
     <button id="scoreBtn">Submit</button>
   </div>
