finished High Scores JS

--- a/high-scores.html
+++ b/high-scores.html
@@ -16,9 +16,10 @@
   <div id="quiz">
     <h2 class="question" id="quizQuestion">High Scores</h2>
     <ol id="highScores"></ol>
-    <button id="goBack">Go Back</button>
-    <button id="resetScores" value="reset">Clear High Scores</button>
+    <button id="back">Go Back</button>
+    <button id="resetScores">Clear High Scores</button>
   </div>
 
+  <script src="assets/js/scores.js"></script>
 </body>
 </html>
